[package]
name = "connectedtext"
version = "0.1.0"
authors = ["David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
chrono = "0.4.19"
regex = "1.4.1"
itertools = "0.9.0"
util-rust = { path = "../util-rust" }


